[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/effect_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Mirror.gd" type="Script" id=2]
[ext_resource path="res://effects/mirror.tres" type="Material" id=3]

[node name="Symmetry" index="0" instance=ExtResource( 1 )]
margin_right = 341.0
margin_bottom = 218.0
title = "Symmetry"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.0784314, 0.611765, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.12549, 1, 0, 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "0", "Rect", "Script", "Slot", "slot", "slot/0" ]

[node name="Viewport" parent="." index="0"]
render_target_update_mode = 3

[node name="TextureRect" parent="Viewport" index="0"]
material = ExtResource( 3 )
margin_right = 512.0
margin_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 24.0
margin_right = 110.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="MirrorX" type="CheckBox" parent="VBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 94.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "X-Axis"
flat = false
align = 0
_sections_unfolded = [ "Rect" ]

[node name="MirrorY" type="CheckBox" parent="VBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 94.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Y-Axis"
flat = false
align = 0
_sections_unfolded = [ "Rect" ]

[connection signal="toggled" from="VBoxContainer/MirrorX" to="." method="_on_MirrorX_toggled"]
[connection signal="toggled" from="VBoxContainer/MirrorY" to="." method="_on_MirrorY_toggled"]
